--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>I want to learn...</title>
     <link href="CSS/normalize.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-		<link href="../v1.32/CSS/style.css" rel="stylesheet">
+		<link href="CSS/style.css" rel="stylesheet">
   </head>
   
 	<body>
