Revert "CSS Link Fix"
This reverts commit 52cb792be8e238de503c067558cc06c4c6d0df4e.

--- a/SilasShows.html
+++ b/SilasShows.html
@@ -5,7 +5,7 @@
     <title>I want to learn letters</title>
     <link href="CSS/normalize.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <link href="CSS/style.css" rel="stylesheet">
+    <link href="../v1.32/CSS/style.css" rel="stylesheet">
   </head>
   
   <body>
