--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<li><a href="SilasMusic.html">Music</a></li>
 					<li><a href="SilasColors.html">Colors</a></li>
 					<li><a href="SilasShows.html">TV Shows</a></li>
-			                <li><a href="<li><a href="https://www.dropbox.com/s/evc6ul8bugks66b/coding-cheat-sheet.md?dl=0">CODING</a></li>
+			                <li><a href="https://www.dropbox.com/s/evc6ul8bugks66b/coding-cheat-sheet.md?dl=0">CODING</a></li>
 				</ul>
 				</nav>
 			</header>
