--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<li><a href="SilasNumbers.html">Numbers</a></li>
 					<li><a href="SilasMusic.html">Music</a></li>
 					<li><a href="SilasColors.html">Colors</a></li>
-					<li><a href="SilasShows.html">TV Shows</a></li>
+					<li><a href="SilasShows.html">TV</a></li>
 			                <li><a href="">CODING</a></li>
 				</ul>
 				</nav>
