--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 					<li><a href="SilasColors.html">Colors</a></li>
 					<li><a href="SilasShows.html">TV</a></li>
 			                <li><a href="">CODING</a></li>
+					<li><a href="indexIndex.html">Weekly Menu</a></li>
 				</ul>
 				</nav>
 			</header>
