--- a/indexIndex.html
+++ b/indexIndex.html
@@ -82,7 +82,7 @@
     </div>
   
   </div>
-      <script type='text/javascript' src="script.js"></script>
-      <script type='text/javascript' src="peterplays.github.io/countdownClock/countdownClock.js"></script>
+      <script src="script.js"></script>
+      <script src="peterplays.github.io/countdownClock/countdownClock.js"></script>
 </body>
 </html>
