Update and rename Spanish-Flashcards.html to SpanishFlashcards.html

--- a/SpanishFlashcards.html
+++ b/SpanishFlashcards.html
@@ -20,6 +20,6 @@
     <button class='next'>Next Card</button>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores autem perspiciatis id voluptates quam hic in obcaecati debitis molestiae voluptatem inventore minus commodi officia expedita nulla, porro ipsa fugit. Ex!</p>
   </main>
-  <script src="script.js"></script>
+  <script src="SpanishFlashcardsScript.js"></script>
 </body>
 </html>
