--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<h1>I want to learn...</h1>
 				<nav class="index-nav">
 					<ul>
-					<li><a href="SpanishFlashCards.html">Spanish</a></li>	
+					<li><a href="SpanishFlashcards.html">Spanish</a></li>	
 					<li><a href="SilasLetters.html">Letters</a></li>
 					<li><a href="SilasNumbers.html">Numbers</a></li>
 					<li><a href="SilasMusic.html">Music</a></li>
